# visualSLAM_learning

./: .gitattributes  .gitignore  docker-compose.yml
docker/: Dockerfile
l1/: README.md
l1/hello/: CMakeLists.txt
l1/hello/src/: CMakeLists.txt
l1/sayhello/include/: myAdd.h
l1/sayhello/src/: CMakeLists.txt  myAdd.cpp  myAdd_test.cpp  useHello.cpp
workspace/VIO_lesson_1/: README.md
workspace/VIO_lesson_1/task2/: CMakeLists.txt  task2.cpp
workspace/VIO_lesson_2/: .gitignore  README.md
workspace/VIO_lesson_2/case1/: param.txt
workspace/VIO_lesson_2/case1/imu_utils_result/: visualSLAM_imu_param.yaml
workspace/VIO_lesson_2/case2/: param.txt
workspace/VIO_lesson_2/case2/imu_utils_result/: visualSLAM_imu_param.yaml
workspace/VIO_lesson_2/case3/: param.txt
workspace/VIO_lesson_2/case3/imu_utils_result/: visualSLAM_imu_param.yaml
workspace/VIO_lesson_2/course2_hw_new/catkin_ws/src/vio_data_simulation-ros_version/src/: gener_alldata.cpp
workspace/VIO_lesson_2/course2_hw_new/imu_utils_ws/src/code_utils/src/: mat_io_test.cpp  sumpixel_test.cpp
workspace/VIO_lesson_2/course2_hw_new/imu_utils_ws/src/imu_utils/: package.xml
workspace/VIO_lesson_2/course2_hw_new/imu_utils_ws/src/imu_utils/launch/: vSLAM.launch
workspace/VIO_lesson_2/course2_hw_new/imu_utils_ws/src/imu_utils/scripts/: all_of_draw_allan.m  draw_allan_visualSLAM_acc.m  draw_allan_visualSLAM_gyro.m
workspace/VIO_lesson_2/course2_hw_new/vio_data_simulation/src/: imu.cpp
workspace/VIO_lesson_2/course2_hw_new/vio_data_ws/src/vio_data_simulation-ros_version/src/: param.h
workspace/VIO_lesson_2/course2_hw_new/vio_data_ws/src/vio_data_simulation/python_tool/: draw_points.py
workspace/VIO_lesson_2/course2_hw_new/vio_data_ws/src/vio_data_simulation/src/: imu.cpp
workspace/VIO_lesson_3/: README.md  draw_curve.py
workspace/VIO_lesson_3/CurveFitting_LM/app/: CMakeLists.txt  my_curve_fitting.cpp
workspace/VIO_lesson_3/CurveFitting_LM/backend/: problem.cc
workspace/VIO_lesson_3/docs/: task1_1_result.txt  task1_3_result.txt
workspace/VIO_lesson_4/: README.md
workspace/VIO_lesson_4/course4/nullspace_test/: hessian_nullspace_test.cpp
workspace/VIO_lesson_5/: README.md
workspace/VIO_lesson_5/hw_course5_new/app/: TestMonoBA.cpp
workspace/VIO_lesson_5/hw_course5_new/backend/: edge_prior.h  problem.cc
workspace/VIO_lesson_6/: README.md
workspace/VIO_lesson_6/course6_hw/: CMakeLists.txt  run.py  triangulate.cpp
workspace/lesson_1/: README.md
workspace/lesson_1/hello/src/: hello.cpp
workspace/lesson_1/sayhello/: CMakeLists.txt
workspace/lesson_1/sayhello/cmake/: FindHELLO.cmake
workspace/lesson_2/: README.md
workspace/lesson_2/task2/: CMakeLists.txt  myFunction.cpp  myFunction.h  useEigen.cpp
workspace/lesson_2/task4/: CMakeLists.txt  useEigenGeometry.cpp
workspace/lesson_3/: README.md
workspace/lesson_3/task7/: CMakeLists.txt  draw_trajectory.cpp
workspace/lesson_3/task8/: CMakeLists.txt  rmse.cpp
workspace/lesson_4/: README.md
workspace/lesson_4/task2/: CMakeLists.txt  undistort_image.cpp
workspace/lesson_4/task3/: CMakeLists.txt  fisheye.cpp
workspace/lesson_4/task4/: CMakeLists.txt  disparity.cpp
workspace/lesson_4/task6/: CMakeLists.txt  gaussnewton.cpp
workspace/lesson_4/task7/: CMakeLists.txt
workspace/lesson_5/: README.md
workspace/lesson_5/task2/: CMakeLists.txt  computeORB.cpp
workspace/lesson_5/task3/: CMakeLists.txt  E2Rt.cpp
workspace/lesson_5/task4/: CMakeLists.txt  GN-BA.cpp
workspace/lesson_5/task5/: CMakeLists.txt  task5.cpp
workspace/lesson_6/: README.md
workspace/lesson_6/task2/: CMakeLists.txt  optical_flow.cpp
workspace/lesson_6/task3/: CMakeLists.txt  direct_method.cpp
workspace/lesson_6/task4/: CMakeLists.txt  optical_flow_disparity.cpp
workspace/lesson_7/: README.md
workspace/lesson_7/task2/: CMakeLists.txt  cameraParameters.hpp  edgeProjection.hpp  graph.g2o  measurement.hpp  point.hpp  task2.cpp  test  vertexCamera.hpp  vertexPosition.hpp
workspace/lesson_7/task3/: CMakeLists.txt  directBA.cpp
